RESOLVED FIXED115061
REGRESSION(r148922): Crash opening web archives or loading web pages
https://bugs.webkit.org/show_bug.cgi?id=115061
Summary REGRESSION(r148922): Crash opening web archives or loading web pages
Anders Carlsson
Reported 2013-04-23 14:47:54 PDT
REGRESSION(r148922): Crash opening web archives or loading web pages
Attachments
Patch (2.13 KB, patch)
2013-04-23 14:51 PDT, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2013-04-23 14:51:03 PDT
Anders Carlsson
Comment 2 2013-04-23 14:55:54 PDT
Note You need to log in before you can comment on or make changes to this bug.