REGRESSION(r148922): Crash opening web archives or loading web pages https://bugs.webkit.org/show_bug.cgi?id=115061 <rdar://problem/13714228>

Reviewed by Sam Weinig.

* WebProcess/Network/WebResourceLoader.cpp:
(WebKit::WebResourceLoader::didReceiveResponseWithCertificateInfo):
Calling ResourceLoader::didReceiveResponse can cause the WebResourceLoader object to go away,
so protect it here and guard against a null core loader.

Canonical link: https://commits.webkit.org/133494@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148995 268f45cc-cd09-0410-ab3c-d52691b4dbfc